--- a/infrastructure/pubspec.yaml
+++ b/infrastructure/pubspec.yaml
@@ -8,8 +8,14 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  drift: ^2.13.0
+  path: ^1.8.3
+  path_provider: ^2.0.0
+  sqlite3_flutter_libs: ^0.5.0
   very_good_analysis: ^5.1.0
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  drift_dev: ^2.13.0
   lints: ^2.0.0
   test: ^1.21.0
