--- a/infrastructure/pubspec.yaml
+++ b/infrastructure/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  domain:
+    path: ../domain
   drift: ^2.13.0
   path: ^1.8.3
   path_provider: ^2.0.0
