--- a/infrastructure/pubspec.yaml
+++ b/infrastructure/pubspec.yaml
@@ -1,7 +1,7 @@
 name: infrastructure
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+publish_to: none
 
 environment:
   sdk: ^3.0.6
@@ -19,5 +19,6 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.6
   drift_dev: ^2.13.0
+  flutter_test:
+    sdk: flutter
   lints: ^2.0.0
-  test: ^1.21.0
