General: Independency injection implemented

--- a/infrastructure/pubspec.yaml
+++ b/infrastructure/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   domain:
     path: ../domain
   drift: ^2.13.0
+  get_it: ^7.6.4
+  injectable: ^2.3.2
+  injectable_generator: ^2.4.1
   path: ^1.8.3
   path_provider: ^2.0.0
   sqlite3_flutter_libs: ^0.5.0
