--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,22 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.2
+  domain:
+    path: domain
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.0.0
+  get_it: ^7.6.4
+  infrastructure:
+    path: infrastructure
+  injectable: ^2.3.2
+  injectable_generator: ^2.4.1
+  very_good_analysis: ^5.1.0
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
 
